--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="contacts-page__bg white-header">
                     <div class="contacts-page__bg-animation">
-                        <img src="../assets/images/contacts.png" alt="">
+                        <img src="../assets/images/contacts-mob.png" alt="">
                     </div>
                 </div>
             </div>
