--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -314,6 +314,8 @@
                          <div class="swiper projects-swiper ">
                              <div class="swiper-wrapper">
                                  <div class="swiper-slide">
+                                     <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
+
                                      <div class="projects-swiper-slide__content">
                                          <div class="projects-swiper-slide__button-anchor">
                                              <div class="main-view__button-text-wrapper">
@@ -375,6 +377,7 @@
                                              </div>
                                          </div>
                                      </div>
+                                     <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                                      <div class="projects-swiper-slide__wrapper">
                                          <img class="slide-up-and-scale-in-view" src="../assets/images/MSC-21.png" alt="">
                                      </div>
@@ -659,13 +662,13 @@
                                         <div class="services-list__description">Комплексная услуга по дизайну интерьера</div>
                                     </div>
                                 </div>
-                                <div class="services-list__item mb-4">
+                                <div class="services-list__item">
                                     <div class="services-list__item-animation">
                                         <div class="services-list__img-wrapper">
-                                            <img src="../assets/images/service2.png" alt="">
+                                            <img src="../assets/images/service4.png" alt="">
                                         </div>
-                                        <div class="services-list__name">Авторский надзор</div>
-                                        <div class="services-list__description">Контроль реализации проекта </div>
+                                        <div class="services-list__name">Архитектура</div>
+                                        <div class="services-list__description">Полный спектр архитектурного проектирования</div>
                                     </div>
                                 </div>
                                 <div class="services-list__item">
@@ -677,13 +680,13 @@
                                         <div class="services-list__description">Обеспечение материалами, мебелью, декором</div>
                                     </div>
                                 </div>
-                                <div class="services-list__item">
+                                <div class="services-list__item mb-4">
                                     <div class="services-list__item-animation">
                                         <div class="services-list__img-wrapper">
-                                            <img src="../assets/images/service4.png" alt="">
+                                            <img src="../assets/images/service2.png" alt="">
                                         </div>
-                                        <div class="services-list__name">Архитектура</div>
-                                        <div class="services-list__description">Полный спектр архитектурного проектирования</div>
+                                        <div class="services-list__name">Авторский надзор</div>
+                                        <div class="services-list__description">Контроль реализации проекта </div>
                                     </div>
                                 </div>
                             </div>
@@ -1162,7 +1165,7 @@
                          <div class="piter__content">
                              <div class="piter__button-anchor black-button mid-size">
                                  <div class="main-view__button-text-wrapper">
-                                     <div class="main-view__button-text">связаться<br>с руководством</div>
+                                     <div class="main-view__button-text">оставить<br>заявку</div>
                                  </div>
                                  <div class="main-view__arrow-wrapper">
                                      <div class="main-view__arrow">
@@ -1234,7 +1237,7 @@
              </section>
          </div>
          <div class="fade-in mb-8" data-anchor="result">
-             <section class="result">
+             <section class="result main">
                  <div class="result__scroll">
                      <div class="result__content">
                          <div class="result__left">
@@ -1276,7 +1279,7 @@
                                  </div>
                              </a>
                              <div class="result-swiper__navigation">
-                                 <div class="result-swiper__navigation-animation slide-up-in-view">
+                                 <div class="result-swiper__navigation-animation scale-into-view">
                                      <div class="result-swiper__prev">
                                          <svg class="icon-arrow-left" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -1506,7 +1509,7 @@
                              </div>
                              <div class="footer__right">
                                  <div class="slide-up-in-view__container">
-                                     <div class="slide-up-in-view duration-1">
+                                     <div class="slide-up-in-view0 duration-1">
                                          <div class="footer__right-button">
                                             <a href="#" class="primary-button">
                                              <div class="slide-up-in-view__container">
@@ -1514,7 +1517,7 @@
                                                      <div class="primary-button__text-animation">заявка на обратный звонок</div>
                                                  </div>
                                              </div>
-                                             <div class="primary-button__circle-anchor">
+                                             <div class="primary-button__circle-anchor show">
                                                  <div class="primary-button__circle-animation">
                                                      <div class="primary-button__circle"></div>
                                                  </div>
