--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -328,7 +328,7 @@
         </section>
     </div>
     <div class="mb-8" data-anchor="price-assembly">
-        <section class="price-assembly">
+        <section class="price-assembly prices">
             <div class="price-assembly__scroll">
                 <div class="price-assembly__content">
                     <div class="price-supervision__img scale-into-view">
@@ -361,14 +361,15 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="price-assembly__text">
+                        <div class="price-assembly__text1">
                             <div class="slide-up-in-view__container">
                                 <div class="slide-up-in-view duration-1">
                                     Услуга предоставляется только при заказе<br>
                                     «Авторского надзора»
                                 </div>
                             </div>
-                            <div class="price-assembly__text-spicer"></div>
+                        </div>
+                        <div class="price-assembly__text">
                             <div class="slide-up-in-view__container">
                                 <div class="slide-up-in-view duration-1">
                                     Все цены зависят от текущих условий<br>
