--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -143,6 +143,7 @@
                 <div class="project__bg">
                     <img src="../assets/images/project1.png" alt="">
                 </div>
+                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
             </div>
         </section>
     </div>
@@ -234,15 +235,15 @@
                         <div class="project-description__top-text">Москва</div>
                     </div>
                     <div class="project-description__top-right">
-                        <div class="project-description__top-item">
+                        <div class="project-description__top-item fr">
+                            <div class="project-description__top-title">год</div>
+                            <div class="project-description__top-text">2021</div>
+                        </div>
+                        <div class="project-description__top-item year fr">
                             <div class="project-description__top-title">площадь</div>
                             <div class="project-description__top-text">
                                 55 м<span class="project-description__top-text-upper">2</span>
                             </div>
-                        </div>
-                        <div class="project-description__top-item year">
-                            <div class="project-description__top-title">год</div>
-                            <div class="project-description__top-text">2021</div>
                         </div>
                         <div class="project-description__top-item object2">
                             <div class="project-description__top-title">Объект</div>
@@ -265,7 +266,7 @@
                 </div>
 
             </div>
-            <div class="preoject-description__button">
+            <div class="preoject-description__button left">
                 <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
                 <div class="price-supervision__button-anchor black-button">
                     <div class="main-view__button-text-wrapper">
