--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -153,10 +153,11 @@
             </div>
             <div class="projects-gallery">
                 <div class="projects-gallery__item scale-into-view">
+                    <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
@@ -187,10 +188,11 @@
                     <div class="projects__gray-line"><div class="gray-line"></div></div>
                 </div>
                 <div class="projects-gallery__item scale-into-view">
+                    <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
@@ -224,7 +226,7 @@
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
@@ -258,7 +260,7 @@
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
@@ -292,7 +294,7 @@
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
@@ -326,7 +328,7 @@
                     <div class="projects-swiper-slide__content">
                         <div class="projects-swiper-slide__button-anchor">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text">оставить<br>заявку</div>
+                                <div class="main-view__button-text">смотреть<br>проект</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow">
