--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -93,7 +93,7 @@
     </div>
 </div>
     <div id="container">
-        <div>
+        <div class="mb-8">
             <section class="services-section">
                 <div class="services-section__animation-wrapper">
                     <div class="services-section__animation-scroll">
