--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -143,7 +143,7 @@
         <span>about</span>
     </div>
     <div class="mb-8" data-anchor="about-advantages">
-        <section class="about-advantages">
+        <section class="about-advantages about">
             <div class="about-advantages__scroll">
                 <div class="about-advantages__content">
                     <div class="about-advantages__title">
