--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -101,7 +101,7 @@
                         <img src="../assets/images/about.png" alt="">
                     </div>
                 </div>
-                <div class="about-section__content">
+                <div class="about-section__content about">
                     <div class="about-section__button-anchor">
                         <div class="main-view__button-text-wrapper">
                             <div class="main-view__button-text">оставить<br>заявку</div>
@@ -286,7 +286,7 @@
                         </div>
                         <div class="supervisors__content-main--imgs white-header">
                             <div class="supervisors__content-second">
-                                <img class="scale-into-view" src="../assets/images/sup2.png" alt="">
+                                <img class="scale-into-view" src="../assets/images/sup3.png" alt="">
                             </div>
                         </div>
                         <div class="supervisors__content-text">
