--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -319,7 +319,7 @@
                                      <div class="projects-swiper-slide__content">
                                          <div class="projects-swiper-slide__button-anchor">
                                              <div class="main-view__button-text-wrapper">
-                                                 <div class="main-view__button-text">оставить<br>заявку</div>
+                                                 <div class="main-view__button-text">смотреть<br>проект</div>
                                              </div>
                                              <div class="main-view__arrow-wrapper">
                                                  <div class="main-view__arrow">
@@ -386,7 +386,7 @@
                                      <div class="projects-swiper-slide__content">
                                          <div class="projects-swiper-slide__button-anchor">
                                              <div class="main-view__button-text-wrapper">
-                                                 <div class="main-view__button-text">оставить<br>заявку</div>
+                                                 <div class="main-view__button-text">смотреть<br>проект</div>
                                              </div>
                                              <div class="main-view__arrow-wrapper">
                                                  <div class="main-view__arrow">
@@ -419,7 +419,7 @@
                                      <div class="projects-swiper-slide__content">
                                          <div class="projects-swiper-slide__button-anchor">
                                              <div class="main-view__button-text-wrapper">
-                                                 <div class="main-view__button-text">оставить<br>заявку</div>
+                                                 <div class="main-view__button-text">смотреть<br>проект</div>
                                              </div>
                                              <div class="main-view__arrow-wrapper">
                                                  <div class="main-view__arrow">
@@ -452,7 +452,7 @@
                                      <div class="projects-swiper-slide__content">
                                          <div class="projects-swiper-slide__button-anchor">
                                              <div class="main-view__button-text-wrapper">
-                                                 <div class="main-view__button-text">оставить<br>заявку</div>
+                                                 <div class="main-view__button-text">смотреть<br>проект</div>
                                              </div>
                                              <div class="main-view__arrow-wrapper">
                                                  <div class="main-view__arrow">
@@ -908,7 +908,7 @@
          </div>
          <div class="mb-8 fade-in video premium-section" data-anchor="premium">
              <section class="premium">
-                <div class="premium__top">
+                <div class="premium__top main">
                     <div class="premium__top-container">
                         <div class="premium__top-left">
                             <div class="premium__title">
