--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -160,7 +160,7 @@
                                 <div class="prices-design__price">
                                     <div class="slide-up-in-view__container">
                                         <div class="slide-up-in-view duration-1">
-                                            7 000 ₽ / м2
+                                            7 000 ₽ / м<span class="upper">2</span>
                                         </div>
                                     </div>
                                 </div>
