--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -124,7 +124,7 @@
                 <div class="project__anchor">
                     <div class="project__button-anchor scroll-down">
                         <div class="main-view__button-text-wrapper">
-                            <div class="main-view__button-text">scroll down</div>
+                            <div class="main-view__button-text">scroll<br>down</div>
                         </div>
                         <div class="main-view__arrow-wrapper">
                             <div class="main-view__arrow">
