--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -235,8 +235,12 @@
                             </div>
                         </div>
                         <div class="steps__button-anchor black-button mid-size">
-                            <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text main-view__button-text5">оставить<br>заявку</div>
+                            <div class="main-view__button-text-wrapper row3 tt">
+                                <div class="main-view__button-text main-view__button-text5">
+                                    закажите<br>
+                                    звонок в удобное<br>
+                                    для вас время
+                                </div>
                             </div>
                             <div class="main-view__arrow-wrapper">
                                 <div class="main-view__arrow main-view__arrow5">
@@ -389,7 +393,7 @@
     <div data-anchor="interiors">
         <section class="interiors compl">
             <div class="interiors__scroll">
-                <div class="interiors__content">
+                <div class="interiors__content compl">
                     <div class="interiors__top">
                         <div class="result-swiper__navigation scale-into-view">
                             <div class="result-swiper__navigation-animation">
@@ -448,15 +452,14 @@
                                                 <div class="interiors-swiper-slide__content-title">
                                                     <div class="slide-up-in-view__container">
                                                         <div class="slide-up-in-view duration-1">
-                                                            Мы специализируемся на премиум сегменте
+                                                            Корректное оформление
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="interiors-swiper-slide__content-text">
                                                     <div class="slide-up-in-view__container">
                                                         <div class="slide-up-in-view duration-1">
-                                                            Мы работаем с большими бюджетами более 10 лет и и пришли к выводу, что кто-то умеет экономить, а мы умеем грамотно вкладывать большие бюджеты, так чтобы это чувствовалось,
-                                                            но не выглядело безвкусно.
+                                                            Мы гарантируем, что все закупки будут оформлены правильно и в полном соответствии с проектом.
                                                         </div>
                                                     </div>
                                                 </div>
