--- a/src/pages/service-design.html
+++ b/src/pages/service-design.html
@@ -488,7 +488,7 @@
                                                 <div class="interiors-swiper-slide__content-title">
                                                     <div class="slide-up-in-view__container">
                                                         <div class="slide-up-in-view duration-1">
-                                                            Мы специализируемся на премиум сегменте
+                                                            Мы специализируемся<br> на премиум сегменте
                                                         </div>
                                                     </div>
                                                 </div>
@@ -733,22 +733,6 @@
     <div data-anchor="projects" class="mb-8 projects-section">
         <section class="projects isSelected">
             <div class="fullscreen-projects"></div>
-            <!--<div class="projects__button-anchor">
-                <div class="main-view__button-text-wrapper">
-                    <div class="main-view__button-text">смотреть<br>проекты</div>
-                </div>
-                <div class="main-view__arrow-wrapper">
-                    <div class="main-view__arrow">
-                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="animation-button-height animation-height">
-                    <div class="round-button"></div>
-                </div>
-            </div>-->
             <div class="projects-top black-header">
                 <div class="projects-top__content">
                     <div class="animation-slide-down__container">
@@ -801,10 +785,12 @@
                     <div class="swiper projects-swiper ">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
+
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -862,6 +848,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                                 <div class="projects-swiper-slide__wrapper">
                                     <img class="slide-up-and-scale-in-view" src="../assets/images/MSC-21.png" alt="">
                                 </div>
@@ -870,7 +857,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -903,7 +890,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -936,7 +923,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -991,7 +978,7 @@
         </section>
     </div>
     <div data-anchor="faq">
-        <section class="faq">
+        <section class="faq with-image">
             <div class="faq__scroll">
                 <div class="faq__content">
                     <div class="faq__left">
