--- a/src/pages/service-architecture.html
+++ b/src/pages/service-architecture.html
@@ -254,16 +254,21 @@
                                         </div>
                                     </div>
                                     <div class="services-desc__text-spicer"></div>
-                                    <div class="services-desc__text-wrapper mob">
+                                    <div class="services-desc__text-wrapper">
                                         <div class="slide-down-in-view__container">
                                             <div class="slide-down-in-view duration-1">
                                                 Оплачивается отдельно, учитывается в общей стоимости договора при заказе проекта
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="services-desc__button-anchor mob black-button mid-size">
+                                    <div class="services-desc__button-anchor black-button mid-size">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">зфкажите<br>звонок</div>
+                                            <div class="main-view__button-text row3">
+                                                закажите<br>
+                                                звонок<br>
+                                                в удобное<br>
+                                                для вас время
+                                            </div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -452,22 +457,6 @@
     <div data-anchor="projects" class="mb-8 projects-section">
         <section class="projects isSelected">
             <div class="fullscreen-projects"></div>
-            <!--<div class="projects__button-anchor">
-                <div class="main-view__button-text-wrapper">
-                    <div class="main-view__button-text">смотреть<br>проекты</div>
-                </div>
-                <div class="main-view__arrow-wrapper">
-                    <div class="main-view__arrow">
-                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="animation-button-height animation-height">
-                    <div class="round-button"></div>
-                </div>
-            </div>-->
             <div class="projects-top black-header">
                 <div class="projects-top__content">
                     <div class="animation-slide-down__container">
@@ -520,10 +509,12 @@
                     <div class="swiper projects-swiper ">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
+
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -581,6 +572,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                                 <div class="projects-swiper-slide__wrapper">
                                     <img class="slide-up-and-scale-in-view" src="../assets/images/MSC-21.png" alt="">
                                 </div>
@@ -589,7 +581,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -622,7 +614,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -655,7 +647,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -900,15 +892,6 @@
                                     <div class="services-list__description">Комплексная услуга по дизайну интерьера</div>
                                 </div>
                             </div>
-                            <div class="services-list__item mb-4">
-                                <div class="services-list__item-animation">
-                                    <div class="services-list__img-wrapper">
-                                        <img src="../assets/images/service2.png" alt="">
-                                    </div>
-                                    <div class="services-list__name">Авторский надзор</div>
-                                    <div class="services-list__description">Контроль реализации проекта </div>
-                                </div>
-                            </div>
                             <div class="services-list__item">
                                 <div class="services-list__item-animation">
                                     <div class="services-list__img-wrapper">
@@ -916,6 +899,15 @@
                                     </div>
                                     <div class="services-list__name">Комплектация</div>
                                     <div class="services-list__description">Обеспечение материалами, мебелью, декором</div>
+                                </div>
+                            </div>
+                            <div class="services-list__item mb-4">
+                                <div class="services-list__item-animation">
+                                    <div class="services-list__img-wrapper">
+                                        <img src="../assets/images/service2.png" alt="">
+                                    </div>
+                                    <div class="services-list__name">Авторский надзор</div>
+                                    <div class="services-list__description">Контроль реализации проекта </div>
                                 </div>
                             </div>
                             <div class="services-list__item mb-4 text-block">
