--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style8.css">
-    <link rel="stylesheet" href="../assets/scss/animations8.css">
-    <link rel="stylesheet" href="../assets/scss/mobile8.css">
+    <link rel="stylesheet" href="../assets/scss/style9.css">
+    <link rel="stylesheet" href="../assets/scss/animations9.css">
+    <link rel="stylesheet" href="../assets/scss/mobile9.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
@@ -732,22 +732,6 @@
     <div data-anchor="projects" class="mb-8 projects-section">
         <section class="projects isSelected">
             <div class="fullscreen-projects"></div>
-            <!--<div class="projects__button-anchor">
-                <div class="main-view__button-text-wrapper">
-                    <div class="main-view__button-text">смотреть<br>проекты</div>
-                </div>
-                <div class="main-view__arrow-wrapper">
-                    <div class="main-view__arrow">
-                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                    </div>
-                </div>
-                <div class="animation-button-height animation-height">
-                    <div class="round-button"></div>
-                </div>
-            </div>-->
             <div class="projects-top black-header">
                 <div class="projects-top__content">
                     <div class="animation-slide-down__container">
@@ -800,10 +784,12 @@
                     <div class="swiper projects-swiper ">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
+
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -861,6 +847,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                                 <div class="projects-swiper-slide__wrapper">
                                     <img class="slide-up-and-scale-in-view" src="../assets/images/MSC-21.png" alt="">
                                 </div>
@@ -869,7 +856,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -902,7 +889,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -935,7 +922,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
